2005-11-05  Kornél Pál  <kornelpal@hotmail.com>

	* AssemblyInfo.cs: Use Consts.FxFileVersion as AssemblyFileVersion and
	  AssemblyInformationalVersion.

2004-05-15  Gert Driesen (drieseng@users.sourceforge.net)
	
	* AssemblyInfo.cs: fixed assembly attributes to match MS
	frameworks

2004-01-23  Marek Safar <marek.safar@seznam.cz>

	* AssemblyInfo.cs: Added
	* ChangeLog: Added