@@ -1,3 +1,7 @@
+2008-04-23  Andreas Nahr <ClassDevelopment@A-SoftTech.com>
+
+	* AssemblyInfo.cs: Added missing attributes
+
 2005-11-05  Kornél Pál  <kornelpal@hotmail.com>
 
 	* AssemblyInfo.cs: Use Consts.FxFileVersion as AssemblyFileVersion and
